client/styles/pages/_courses.scss
[class^="max-lines-"], [class*=" max-lines-"] {
    display: block; /* Fallback for non-webkit */
    display: -webkit-box !important;
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    box-sizing:content-box;
}
.max-lines-1 { -webkit-line-clamp: 1; height: $font-size-base*$line-height-base*1; /* Fallback for non-webkit */ }
.max-lines-2 { -webkit-line-clamp: 2; height: $font-size-base*$line-height-base*2; /* Fallback for non-webkit */ }
.max-lines-3 { -webkit-line-clamp: 3; height: $font-size-base*$line-height-base*3; /* Fallback for non-webkit */ }
h3.max-lines-1 { height: $font-size-h3*$headings-line-height*1; /* Fallback for non-webkit */ }
h3.max-lines-2 { height: $font-size-h3*$headings-line-height*2; /* Fallback for non-webkit */ }
h3.max-lines-3 { height: $font-size-h3*$headings-line-height*3; /* Fallback for non-webkit */ }



// Course panel box
.course-box {
  cursor:pointer;

  .panel-label {
    padding:10px;
    text-transform: uppercase;
  }

  .panel-heading a {
    color:inherit;
    text-decoration: none;
  }

  .panel-bottom {
    ul.list-justified > li {
      padding: 0 10px;
      border-right: none;
      border-left:1px solid #eeeeee;

      &:first-child {
        border-left:none;
      }

      &.text-label {
        vertical-align: middle;
        line-height: $font-size-h3;
      }
      .btn {
        vertical-align: super;
      }
    }
  }


  &.compact {
    h3 {
      margin: 10px 0;
    }
  }


  // Animations
  &.ng-enter, &.ng-move, &.ng-leave {
    @include transition(all 0.5s ease-out);
    overflow:hidden; 
  }
  &.ng-enter, &.ng-move, &.ng-leave.ng-leave-active {
    opacity:0;
    top:50px;
  }
  &.ng-enter.ng-enter-active, &.ng-move.ng-move-active, &.ng-leave {
    opacity: 1;
    top:0;
  }

  // Rotating buttons
  $animation-time: 0.3s;
  .panel-btn-group {

    width:100%;
    margin-top: -75px;
    position: relative;
    height: 150px;

    .panel-btn-container {
      width: 50%;
      height: 50px;
      line-height: 50px;
      margin-top: 50px;
      overflow:hidden;

      .panel-btn {
        display: block;
        border: 1px solid $brand-primary;
        background: $reverse;
        padding: 0 20px;
        height:100%;
        position: relative;
        font-size:$font-size-h4;
        opacity: 0;
        cursor:pointer;
        @include transition( all $animation-time ease-out);
        &:hover {
          background:$brand-primary;
          color:$reverse;
        }
      }
    }
    .panel-btn-rotate {
      @include rotate(-90deg);
      @include transform-origin(50%, 75%);
      @include transition(transform $animation-time ease-out);
    }

    .panel-btn-left {
      float: left;
      text-align: left;
      @include border-left-radius($border-radius-base);
      margin-left: -10px;
      .panel-btn {
        left:100%;
      }
    }

    .panel-btn-right {
      float:right;
      text-align: right;
      @include border-right-radius($border-radius-base);
      margin-right: -10px;
      .panel-btn {
        left:-100%;
      }
    }

    .panel-icon {
      position: absolute;
      left: 50%;
      margin-left: -75px;
      margin: 0 0 0 -75px;
      z-index:1;
    }
  }

  &:hover .panel-btn-group {
    .panel-btn-rotate {
      @include rotate(0deg);
    }
    .panel-btn {
      left:0;
      opacity:1;
    }
  } 
}


.course-catalog {
  .filters {
    margin-top: 20px;
    
    .panel-item {
      padding: 15px 20px 0;
    }
    .panel-left {
      width:80px;
    }
    .panel-right {
      width:auto;
    }

    .control-label {
      width:105px;
    }
    .ui-select {
      width:210px;
      & > select { width:100%; }
    }
  }
}

.page-course-filter {
  padding-bottom: 50px;
  background: url('../images/background/cal.jpg') no-repeat center center fixed; 
  @include background-size(cover);

  .main-filter {
    display:none;
    @include transition(all 0.5s ease-out);
    margin-top: 0;
    .box-icon {
      margin-bottom: 0;
      background:$brand-danger;
      color:$reverse;
    }
    h1 {
      margin-top: 12px;
    }
    .ui-select {
      width:100%;
      margin-top: 10px;
      select {
        font-size: 1.2em;
        width: 100%;
      }
    }
    .input-group-btn .btn {
      height:30px;
      width:30px;
      border-radius: 50%;
      margin-left: 1em;
      margin-top: 0.5em;
      padding: 0;
      line-height: 30px;
    }
    &.visible, &.visible-add {
      display:block;
    }
    &.visible-add {
      opacity: 0;
    }
    &.visible-add-active {
      opacity: 1;
    }
    &.selected {
      @include scale(0.8);
      opacity: 0.75;
      margin-top: -20px;

      .box-icon {
        background: $brand-success;
      }
    }

  }
}

#course-detail {
  // Rating
  .rating-container {
      margin-top: -5px;
      // when active
      .ui-rating .fa.fa-star {
          color: $brand-warning;
      }
      .ui-rating &.has-rated .fa.fa-star {
        color: $color-orange;
      }

      button {
        margin-top: -5px;
      }
  }

}


$footer-body-height: 75px;
$footer-logo-height: 100px;
$footer-logo-inset: -18px;
$footer-height: $footer-logo-height + $footer-body-height + $footer-logo-inset;

.page-course-filter {
  min-height: 100%;
  /* equal to footer height */
  margin-bottom: -$footer-height;
  padding-top: 40px;
  

  &:after {
    content: "";
    display: block;
    height: $footer-height; 
  }
}
.course-filter-footer {
  height:$footer-height;

  .footer-logo {
    color:#414141;
    font-size:$footer-logo-height;
    line-height: $footer-logo-height;
    margin-bottom: $footer-logo-inset;
    text-align: center;
  }
  .footer-body {
    background:#414141;
    padding:15px;
    color:$reverse;
    text-align: center;
    height:$footer-body-height;
  }
}

#course_information .well {
    h4:first-child {
        margin-top: 0px;
    }
    h4 {
        margin-top: 15px;
        margin-bottom: 7px;
    }
    p {
        font-size: 14px;
        margin-left: 20px;
    }
}

